ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2 # Adjusting rewrite behavior
    nginx.ingress.kubernetes.io/use-regex: "true"   # Enables regex for paths
spec:
  ingressClassName: nginx # Ensure this matches your NGINX Ingress class name
  rules:
  - http:
      paths:
      - path: /hello-world
        pathType: Prefix
        backend:
          service:
            name: hello-world
            port:
              number: 80
      - path: /kotlin(/|$)(.*)  # Regex for demo-service and sub-paths
        pathType: ImplementationSpecific # Required for regex usage
        backend:
          service:
            name: kotlin-app
            port:
              number: 80
